--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/express": "^4.17.9",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "ts-node-dev": "^1.0.0"
+    "ts-node-dev": "^1.0.0",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
