--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.9",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "ts-node-dev": "^1.0.0",
+    "bcrypt": "^5.0.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
@@ -38,6 +36,7 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.1",
     "ts-jest": "^26.4.4",
+    "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   }
 }
